syntax = "proto3";

option go_package = "github.com/lrmnt/AA6_homework/lib/api/task_event";
package task_event;

enum Event {
  EVENT_UNKNOWN = 0;
  EVENT_REASSIGNED = 1;
  EVENT_DONE = 2;
}

message TaskEventV1 {
  Event event = 1;
  int64 timestamp = 2;
  string event_id = 3;
  string task_id = 4;
  string assignee_user_id = 5;
}